# football-analysis

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  games.ipynb  pyproject.toml
app/: app.py  index.py  pitch_plot.py  server.py
app/assets/css/: styles.css
football_analysis/: pass_sample.json  statsbomb_data.py
football_analysis/config/: __init__.py  central.py  constant.py
football_analysis/models/: __init__.py  statsbomb.py
football_analysis/statsbomb/: analysis.py  scrape.py
jobs/: bayern_leverkusen_bundesliga.py  download_data.py  process_data.py  test_minio_save_data.py
nb/statsbomb/: statsbomb_event_eda.ipynb
