[tool.poetry]
name = "football-analysis"
version = "0.1.0"
description = ""
authors = ["Lucca Miorelli"]
readme = "README.md"
packages = [{include = "football_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
mplsoccer = "^1.2.4"
pydantic = "^2.7.2"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
