[tool.poetry]
name = "football-analysis"
version = "0.1.0"
description = ""
authors = ["Lucca Miorelli"]
readme = "README.md"
packages = [{include = "football_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.128"
boto3-stubs = {extras = ["s3"], version = "^1.34.44"}
dash = "^2.17.0"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
fastparquet = "^2024.5.0"
mplsoccer = "^1.2.4"
pandas = "^2.2.2"
plotly = "^5.22.0"
pydantic = "^2.7.2"
pydantic-settings = "^2.2.1"
ruff = "^0.4.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["nb/*"]

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "D",
    "E",
    "F",
    "I",
    "ISC",
    "N",
    "PGH",
    "PL",
    "PTH",
    "Q",
    "S",
    "SIM",
    "TRY",
    "UP",
    "W",
    "YTT",
    "RUF100",
]
ignore = ["D203", "D212", "ISC001", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["S101"]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"